--- a/website/quotes/index.html
+++ b/website/quotes/index.html
@@ -6,7 +6,7 @@ class: quotes
 
 <h1 class="title">Quotes</h1>
 
-<p>Here's a collection of our favorite quotes! Contact the District Webmaster at <a href="mailto:njwebmastersrikar@gmail.com">njwebmastersrikar@gmail.com</a> with the subject line <i>New Quote For District Website</i> if you want to suggest new quotes!</p>
+<p>Here's a collection of our favorite quotes! Contact the District Webmaster at <a href="mailto:webmaster.speng@gmail.com">webmaster.speng@gmail.com</a> with the subject line <i>New Quote For District Website</i> if you want to suggest new quotes!</p>
 
 <ul>
     <li>
