--- a/website/resources/club-websites/index.html
+++ b/website/resources/club-websites/index.html
@@ -5,7 +5,7 @@ title: Club Websites
 
 <h1 class="title">Club Sites</h1>
 
-<p>Don't see your site here? Contact the District Webmaster at <a href="mailto:njwebmastersrikar@gmail.com">njwebmastersrikar@gmail.com</a>.</p>
+<p>Don't see your site here? Contact the District Webmaster at <a href="mailto:webmaster.speng@gmail.com">webmaster.speng@gmail.com</a>.</p>
 
 <div class="module">
     <a class="smooth-scroll" href="#A">A</a>
