Update RTC locations

--- a/website/events/rtcs/index.html
+++ b/website/events/rtcs/index.html
@@ -50,14 +50,14 @@ class: rtcs
                 </tr>
                 <tr>
                     <td>North</td>
-                    <td><a href="https://goo.gl/maps/Kcx5Q">TBA</a></td>
-                    <td>May 16th, 2015</td>
+                    <td><a href="http://goo.gl/SPpCxC">Morris County Institute of Technology</a></td>
+                    <td>May 9th, 2015</td>
                     <td>9:00 A.M. to 1:00 P.M.</td>
                 </tr>
                 <tr>
                     <td>South</td>
-                    <td><a href="https://goo.gl/maps/YJXCR">TBA</a></td>
-                    <td>May 9th, 2015</td>
+                    <td><a href="http://goo.gl/RTLCYq">West Depford</a></td>
+                    <td>May 16th, 2015</td>
                     <td>9:00 A.M. to 1:00 P.M.</td>
                 </tr>
             </table>
@@ -73,20 +73,20 @@ class: rtcs
                     <th>Time</th>
                 </tr>
                 <tr>
-                    <td>Central</td>
-                    <td><a href="https://goo.gl/maps/oiH5p">TBA</a></td>
-                    <td>September 13th, 2015</td>
-                    <td>9:00 A.M. to 1:00 P.M.</td>
-                </tr>
-                <tr>
                     <td>South</td>
-                    <td><a href="https://goo.gl/maps/dcmFt">TBA</a></td>
+                    <td><a href="http://goo.gl/Phbfcm">Brick Memorial</a></td>
                     <td>September 12th, 2015</td>
                     <td>9:00 A.M. to 1:00 P.M.</td>
                 </tr>
                 <tr>
+                    <td>Central</td>
+                    <td><a href="http://goo.gl/KHK9Qp">Phillipsburg</a></td>
+                    <td>September 13th, 2015</td>
+                    <td>9:00 A.M. to 1:00 P.M.</td>
+                </tr>
+                <tr>
                     <td>North</td>
-                    <td><a href="https://goo.gl/maps/nBpk9">Millburn High School</a></td>
+                    <td><a href="http://goo.gl/ctrR0O">Millburn High School</a></td>
                     <td>September 19th, 2015</td>
                     <td>9:00 A.M. to 1:00 P.M.</td>
                 </tr>
