Update docs in resources and map API key

--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -34,17 +34,17 @@ class: district-resources
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/November 2014 Board Meeting Summary.pdf">November 2014 Board Meeting Summary (PDF)</a></h3>
-                <p>Read all about what the District Board has accomplished at the November 2014 Board Meeting thanks to this meeting summary created by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Read all about what the District Board has accomplished at the November 2014 Board Meeting thanks to this meeting summary created by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/October 2014 Fall Rally Board Meeting Minutes.pdf">Fall Rally Board Meeting Minutes (PDF)</a></h3>
-                <p>Read all about what the District Board has accomplished at the Fall Rally Board Meeting thanks to these meeting minutes created by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Read all about what the District Board has accomplished at the Fall Rally Board Meeting thanks to these meeting minutes created by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/August 2014 Board Meeting Summary.pdf">August Board Meeting Summary (PDF)</a></h3>
-                <p>Read all about what the District Board has accomplished at the August Board Meeting thanks to this summary compiled by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Read all about what the District Board has accomplished at the August Board Meeting thanks to this summary compiled by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
@@ -69,7 +69,7 @@ class: district-resources
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/April 2014 Board Meeting Summary.pdf">April Board Meeting Summary (PDF)</a></h3>
-                <p>Read all about what the District Board has accomplished at the April Board Meeting thanks to this summary compiled by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Read all about what the District Board has accomplished at the April Board Meeting thanks to this summary compiled by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
@@ -108,17 +108,17 @@ class: district-resources
             </li>
 
             <li>
-                <h3><a href="/downloads/district-resources/for-ltgs/Officer Training Conference Report Form.doc">Officer Training Conference Report Form (DOC)</a></h3>
+                <h3><a href="/downloads/district-resources/for-ltgs/Officer Training Conference Report Form.pdf">Officer Training Conference Report Form (PDF)</a></h3>
                 <p>All Lieutenant Governors are required to fill out this form within 10 days of an Officer Training Conference.</p>
             </li>
 
             <li>
-                <h3><a href="/downloads/district-resources/for-ltgs/Divisional Event Report Form.doc">Divisional Event Report Form (DOC)</a></h3>
+                <h3><a href="/downloads/district-resources/for-ltgs/Divisional Event Report Form.pdf">Divisional Event Report Form (PDF)</a></h3>
                 <p>All Lieutenant Governors are required to fill out this form within 15 days of a divisional event.</p>
             </li>
 
             <li>
-                <h3><a href="/downloads/district-resources/for-ltgs/Board Meeting Report Form.doc">Board Meeting Report Form (DOC)</a></h3>
+                <h3><a href="/downloads/district-resources/for-ltgs/Board Meeting Report Form.pdf">Board Meeting Report Form (PDF)</a></h3>
                 <p>All Lieutenant Governors are required to fill out this form before each board meeting.</p>
             </li>
 
@@ -127,17 +127,17 @@ class: district-resources
             </li>
 
             <li>
-                <h3><a href="/downloads/district-resources/for-ltgs/Club Meeting Evaluation Form.doc">Club Meeting Evaluation Form (DOC)</a></h3>
+                <h3><a href="/downloads/district-resources/for-ltgs/Club Meeting Evaluation Form.pdf">Club Meeting Evaluation Form (PDF)</a></h3>
                 <p>All Lieutenant Governors are required to send this form within 15 days of a club visit.</p>
             </li>
 
             <li>
-                <h3><a href="/downloads/district-resources/for-ltgs/Club Meeting Evaluation Email Guidelines.docx">Club Meeting Evaluation Email Guidelines (DOCX)</a></h3>
+                <h3><a href="/downloads/district-resources/for-ltgs/Club Meeting Evaluation Email Guidelines.pdf">Club Meeting Evaluation Email Guidelines (PDF)</a></h3>
                 <p>All Lieutenant Governors are required to send out an evaluation email after a club visit.</p>
             </li>
 
             <li>
-                <h3><a href="/downloads/district-resources/for-ltgs/Club Building Report Form.doc">Club Building Report Form (DOC)</a></h3>
+                <h3><a href="/downloads/district-resources/for-ltgs/Club Building Report Form.pdf">Club Building Report Form (PDF)</a></h3>
                 <p>Lieutenant Governors are required to fill out this form when building a new club.</p>
             </li>
         </ul>
@@ -152,7 +152,7 @@ class: district-resources
             </li>
 
             <li>
-                <h3><a href="/downloads/district-resources/for-committee-chairs/Special Events Committee Report Form.doc">Special Events Committee Report Form (DOC)</a></h3>
+                <h3><a href="/downloads/district-resources/for-committee-chairs/Special Events Committee Report Form.pdf">Special Events Committee Report Form (PDF)</a></h3>
                 <p>Special Event Committee chairs are required to fill out this form within 10 days of a board Meeting.</p>
             </li>
         </ul>
@@ -196,11 +196,17 @@ class: district-resources
         <ul>
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/CMRF Instructions for Club Secretaries.pdf">CMRF Instructions for Club Secretaries (PDF)</a></h3>
-                <p>Need help filling out CMRFs? Check out this document compiled by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Need help filling out CMRFs? Check out this document compiled by Immediate Past District Secretary Jacqueline Dragon!</p>
             </li>
 
             <li>
-                <h3><a href="/downloads/district-resources/for-club-secretaries/Club Monthly Report Form.doc">Club Monthly Report Form (DOC)</a></h3>
+                <h3><a href="/downloads/district-resources/for-club-secretaries/Club Officer Roster Form.pdf">Club Officer Roster Form (PDF)</a></h3>
+                <p>Clubs are required to fill out this form and send it to their respective LTGs or District Secretary Sarah Park ASAP.</p>
+            </li>
+
+
+            <li>
+                <h3><a href="/downloads/district-resources/for-club-secretaries/Club Monthly Report Form.pdf">Club Monthly Report Form (PDF)</a></h3>
                 <p>Club secretaries are required to fill out this form by the 10th day of every month.</p>
             </li>
 
@@ -211,42 +217,42 @@ class: district-resources
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/December 2014 NJ District Secretary Update for Club Secretaries.pdf">December 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/November 2014 NJ District Secretary Update for Club Secretaries.pdf">November 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/October 2014 NJ District Secretary Update for Club Secretaries.pdf">October 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/September 2014 NJ District Secretary Update for Club Secretaries.pdf">September 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/August 2014 NJ District Secretary Update for Club Secretaries.pdf">August 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/July 2014 NJ District Secretary Update for Club Secretaries.pdf">July 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/May 2014 NJ District Secretary Update for Club Secretaries.pdf">May 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/April 2014 NJ District Secretary Update for Club Secretaries.pdf">April 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/jacqueline.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
         </ul>
     </dd>
