Delete old resources

--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -12,7 +12,7 @@ class: district-resources
     <dt><h1>For Everyone</h1></dt>
     <dd>
         <ul>
-            <li>
+            <!--<li>
                 <h3><a href="/downloads/district-resources/for-everyone/Contests Packet 2014-15.pdf">Contests Packet 2014-15 (PDF)</a></h3>
                 <p>Compete with other clubs by participating in this service year's contests!</p>
             </li>
@@ -20,7 +20,7 @@ class: district-resources
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/2015-16 Elections and Campaigning Packet.pdf">2015-16 Elections and Campaigning Packet (PDF)</a></h3>
                 <p>Running for a district board position this year? Check out the elections packet by clicking the link above!</p>
-            </li>
+            </li>-
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/2014-2015 Key Club Annual Achievement Report Form.pdf">2014-2015 Key Club Annual Achievement Report Form (PDF)</a></h3>
@@ -30,21 +30,21 @@ class: district-resources
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/Scholarships Packet.pdf">Scholarships Packet (PDF)</a></h3>
                 <p>Are you a graduating senior this year? If so, check out this scholarships packet compiled by our very own <a href="/board/farwa.html">Farwa Shakeel</a>!</p>
-            </li>
+            </li>-->
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/November 2014 Board Meeting Summary.pdf">November 2014 Board Meeting Summary (PDF)</a></h3>
-                <p>Read all about what the District Board has accomplished at the November 2014 Board Meeting thanks to this meeting summary created by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Read all about what the District Board has accomplished at the November 2014 Board Meeting thanks to this meeting summary created by Immediate PastDistrict Secretary Jacqueline Dragon!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/October 2014 Fall Rally Board Meeting Minutes.pdf">Fall Rally Board Meeting Minutes (PDF)</a></h3>
-                <p>Read all about what the District Board has accomplished at the Fall Rally Board Meeting thanks to these meeting minutes created by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Read all about what the District Board has accomplished at the Fall Rally Board Meeting thanks to these meeting minutes created by Immediate Past District Secretary Jacqueline Dragon!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/August 2014 Board Meeting Summary.pdf">August Board Meeting Summary (PDF)</a></h3>
-                <p>Read all about what the District Board has accomplished at the August Board Meeting thanks to this summary compiled by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Read all about what the District Board has accomplished at the August Board Meeting thanks to this summary compiled by Immediate Past District Secretary Jacqueline Dragon!</p>
             </li>
 
             <li>
@@ -69,7 +69,7 @@ class: district-resources
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/April 2014 Board Meeting Summary.pdf">April Board Meeting Summary (PDF)</a></h3>
-                <p>Read all about what the District Board has accomplished at the April Board Meeting thanks to this summary compiled by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Read all about what the District Board has accomplished at the April Board Meeting thanks to this summary compiled by Immediate Past District Secretary Jacqueline Dragon!</p>
             </li>
 
             <li>
@@ -99,7 +99,7 @@ class: district-resources
         <ul>
             <li>
                 <h3><a href="/downloads/district-resources/for-ltgs/Newsletter Template.pdf">Newsletter Template (PDF)</a></h3>
-                <p>Need help creating a newsletter? Check out this newsletter template compiled by our <a href="/board/patrick.html">District Editor Patrick Quinn</a>!</p>
+                <p>Need help creating a newsletter? Check out this newsletter template created by Immediate Past District Editor Patrick Quinn!</p>
             </li>
 
             <li>
@@ -161,7 +161,8 @@ class: district-resources
     <dt><h1>For Committee Members</h1></dt>
     <dd>
         <ul>
-            <li>
+            <li>Directives for the various committees will be posted soon.</li>
+            <!--<li>
                 <h3><a href="/downloads/district-resources/for-committee-members/DP Directives 14-15.pdf">Directives for the District Programs Committee (PDF)</a></h3>
             </li>
 
@@ -187,7 +188,7 @@ class: district-resources
 
             <li>
                 <h3><a href="/downloads/district-resources/for-committee-members/RTCs Directives 14-15.pdf">Directives for the Regional Training Conferences Committee (PDF)</a></h3>
-            </li>
+            </li>-->
         </ul>
     </dd>
 
@@ -215,9 +216,9 @@ class: district-resources
                 <p>Club secretaries can use this hours record template to help keep track of their club's members' service hours!</p>
             </li>
 
-            <li>
+            <!--<li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/December 2014 NJ District Secretary Update for Club Secretaries.pdf">December 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by Immediate Past District Secretary Jacqueline Dragon!</p>
             </li>
 
             <li>
@@ -253,7 +254,7 @@ class: district-resources
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/April 2014 NJ District Secretary Update for Club Secretaries.pdf">April 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
                 <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
-            </li>
+            </li>-->
         </ul>
     </dd>
 
