Restore old board

--- a/website/board/index.html
+++ b/website/board/index.html
@@ -5,6 +5,7 @@ class: board
 ---
 
     <h1 class="title">New Jersey District Board 2015-2016</h1>
+    <br>
 
     <h2>Executive Members</h2>
 
@@ -19,6 +20,7 @@ class: board
             {% endif %}
         {% endfor %}
     </ul>
+    <br>
 
     <h2>Lieutenant Governors</h2>
 
@@ -33,5 +35,12 @@ class: board
             {% endif %}
         {% endfor %}
     </ul>
+    <br>
+    
+    <h2>Past Boards</h2>
+
+    <p>
+        <a href="2014-2015">2014-2015 District Board</a>
+    </p>
 
 
