--- a/website/events/rtcs/index.html
+++ b/website/events/rtcs/index.html
@@ -57,7 +57,7 @@ class: rtcs
                 </tr>
                 <tr>
                     <!--<td>South</td>-->
-                    <td><a href="http://goo.gl/VA8IOZ">Hammonton High School</a></td>
+                    <td><a href="http://goo.gl/zY9fXs">Hammonton Middle School</a></td>
                     <td>May 16th, 2015</td>
                     <td>9:00 A.M. to 1:00 P.M.</td>
                 </tr>
