New RTC page design

--- a/website/events/rtcs/index.html
+++ b/website/events/rtcs/index.html
@@ -3,20 +3,15 @@ layout: slides
 title: Regional Training Conferences
 class: rtcs
 ---
-
-<div class="section" id="section1">
-    <article>
-        <h1 class="title">Regional Training Conferences</h1>
-
-        <div class="embed-container">
-            <iframe width="560" height="315" src="//www.youtube.com/embed/mR3Ae2WhkPs" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </article>
+<div class="section" id="feature">
+	<h1>Regional Training Conferences</h1>
+	<i><p>spring & fall 2015<br>
+	pumping up the volume on service</p></i>
 </div>
 
-<div class="section" id="section2">
-    <article>
-        <h1>What are Regional Training Conferences?</h1>
+<div class="section" id="what">
+	<article>
+        <h1>What are RTCs?</h1>
 
         <p>Regional Training Conferences, commonly known as RTCs, are biannual training conferences for all Key Clubbers to attend. General members, officers, and advisors alike are invited to come and get the inside scoop on district events, service and fundraising ideas, and other ways to get involved in Key Club.</p>
 
@@ -26,8 +21,8 @@ class: rtcs
     </article>
 </div>
 
-<div class="section" id="section3">
-    <article>
+<div class="section" id="why">
+	<article>
         <h1>Why should I go?</h1>
 
         <p>First of all, you will learn more about Key Club through several workshops that will be held by members of the district board! Also, you will get to make new friends with Key Clubbers from all over New Jersey!</p>
@@ -36,10 +31,10 @@ class: rtcs
     </article>
 </div>
 
-<div class="section" id="section4">
-    <article>
+<div class="section" id="when">
+	<article>
         <h1>When are the conferences held?</h1>
-        <p>*Locations are subject to change.</p>
+        <i><p>*Locations are subject to change.</p></i>
         <h2>Spring RTCs</h2>
         <div class="table-container">
             <table>
@@ -96,12 +91,5 @@ class: rtcs
     </article>
 </div>
 
-<!--<div class="section" id="section5">
-    <article>
-        <h1>Information Flyer</h1>
-
-        <p>Download the flyer below to get more information about the upcoming Spring RTCs!</p>
-
-        <button class="btn"><a href="Spring RTCs Information Sheet.pdf"><i class="fa fa-download"></i>Spring RTCs Information Sheet (PDF)</a></button>
-    </article>
+<!--<div class="section" id="flyer">
 </div>-->
