Minor CSS changes for RTC page

--- a/website/events/rtcs/index.html
+++ b/website/events/rtcs/index.html
@@ -4,7 +4,7 @@ title: Regional Training Conferences
 class: rtcs
 ---
 <div class="section" id="feature">
-	<h1>Regional Training Conferences</h1>
+	<h1>Regional Training <br>Conferences</h1>
 	<i><p>spring & fall 2015<br>
 	pumping up the volume on service</p></i>
 </div>
@@ -13,11 +13,11 @@ class: rtcs
 	<article>
         <h1>What are RTCs?</h1>
 
-        <p>Regional Training Conferences, commonly known as RTCs, are biannual training conferences for all Key Clubbers to attend. General members, officers, and advisors alike are invited to come and get the inside scoop on district events, service and fundraising ideas, and other ways to get involved in Key Club.</p>
+        <p>Regional Training Conferences, or RTCs, are a series of training conferences organized by the NJ District Board. All members of Key Club - general members, officers, and advisors alike - are invited to join!</p>
 
-        <p>New Key Club officers are especially encouraged to come. There will be many useful training workshops for new officers that will help them accomplish their goals and duties during the service year. In fact, each officer <b>MUST attend at least one RTC</b> during his/her term in order to be distinguished at the end of the year.</p>
+        <p>RTCs are held from 9am to 1pm on select weekends, and they feature informative workshops on a variety of topics, including: district events, service and fundraising ideas, public speaking, and ways to get more involved with Key Club. New club officers are strongly encouraged to attend - in fact, each officer <b>MUST attend at least one RTC</b> during his/her term in order to be distinguished at the end of the year at District Convention.</p>
 
-        <p>Each club is encouraged to send at least one representative to RTCs. If your clubs send more, it will be able to split its resources and cover more ground.</p>
+        <p>Each club is encouraged to send at least one representative to its nearest RTC - and keep in mind, the more the merrier!</p>
     </article>
 </div>
 
@@ -25,15 +25,15 @@ class: rtcs
 	<article>
         <h1>Why should I go?</h1>
 
-        <p>First of all, you will learn more about Key Club through several workshops that will be held by members of the district board! Also, you will get to make new friends with Key Clubbers from all over New Jersey!</p>
+        <p>Going to an RTC can help you become more familiar with how Key Club branches from your school's club, to the NJ District level, and to Key Club International. You'll be able to get to know your 2015-2016 District Board and make friends with numerous other Key Clubbers around New Jersey through fun icebreakers.</p>
 
-        <p>Plus, don't forget the free food!</p>
+        <p>Plus, we have free food!</p>
     </article>
 </div>
 
 <div class="section" id="when">
 	<article>
-        <h1>When are the conferences held?</h1>
+        <h1>When are RTCs held?</h1>
         <i><p>*Locations are subject to change.</p></i>
         <h2>Spring RTCs</h2>
         <div class="table-container">
