Add Parsippany HS to club websites

--- a/website/resources/club-websites/index.html
+++ b/website/resources/club-websites/index.html
@@ -93,6 +93,7 @@ title: Club Websites
 <h3 id="O">O</h3>
 
 <h3 id="P">P</h3>
+<p><a href="http://parhighkc.webs.com/">Parsippany High School</a></p>
 <p><a href="http://parhillskeyclub.webs.com/">Parsippany Hills High School</a></p>
 <p><a href="http://pburgkeyclub.webs.com/">Phillipsburg High School</a></p>
 <p><a href="http://www.pwaykeyclub.com/">Piscataway High School</a></p>
