Update RTC slogan and district mailings

--- a/website/events/rtcs/index.html
+++ b/website/events/rtcs/index.html
@@ -6,7 +6,7 @@ class: rtcs
 <div class="section" id="feature">
 	<h1>Regional Training <br>Conferences</h1>
 	<i><p>spring & fall 2015<br>
-	pumping up the volume on service</p></i>
+	pumping up the volume of service</p></i>
 </div>
 
 <div class="section" id="what">
