--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -272,6 +272,14 @@ class: district-resources
             <li>
                 <h3><a href="/downloads/district-resources/district-mailings/2014 December District Mailing.zip">2014 December District Mailing (ZIP)</a></h3>
             </li>
+
+            <li>
+                <h3><a href="/downloads/district-resources/district-mailings/2015 February District Mailing.zip">2015 February District Mailing (ZIP)</a></h3>
+            </li>
+
+            <li>
+                <h3><a href="/downloads/district-resources/district-mailings/2015 March-DCON District Mailing.zip">2015 March-DCON District Mailing (ZIP)</a></h3>
+            </li>
         </ul>
     </dd>
 </dl>
