Update RTC info

--- a/website/events/rtcs/index.html
+++ b/website/events/rtcs/index.html
@@ -52,7 +52,7 @@ class: rtcs
                 </tr>
                 <tr>
                     <!--<td>South</td>-->
-                    <td><a href="http://goo.gl/3OQwv7">South Regional High School</a></td>
+                    <td><a href="http://goo.gl/3OQwv7">Southern Regional High School</a></td>
                     <td>May 16th, 2015</td>
                     <td>9:00 A.M. to 1:00 P.M.</td>
                 </tr>
