--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -33,6 +33,10 @@ class: district-resources
             </li>-->
 
             <li>
+                <h3><a href="/downloads/district-resources/for-everyone/ICON 2015 Packet.pdf">ICON 2015 Packet (PDF)</a></h3>
+                <p>When is ICON 2015 and how do I register? This ICON 2015 Primer contains the details of attending as a member of the NJ District.</p>
+            </li>
+            <li>
                 <h3><a href="/downloads/district-resources/for-everyone/November 2014 Board Meeting Summary.pdf">November 2014 Board Meeting Summary (PDF)</a></h3>
                 <p>Read all about what the District Board has accomplished at the November 2014 Board Meeting thanks to this meeting summary created by Immediate PastDistrict Secretary Jacqueline Dragon!</p>
             </li>
