--- a/website/events/icon/index.html
+++ b/website/events/icon/index.html
@@ -8,17 +8,17 @@ class: icon
     <article>
         <h1 class="title">International Convention</h1>
 
-        <img src="/img/events/icon/icon-logo-2014.png" alt="International Convention 2014">
+        <img src="/img/events/icon/icon-logo-2015.png" alt="International Convention 2015">
     </article>
 </div>
 
 <div class="section" id="section2">
     <article>
-        <h1>What is the International Convention?</h1>
+        <h1>What is ICON?</h1>
 
-        <p>International Convention is one of the biggest events of the Key Club year! You will go to Anaheim, California and meet more than 1,600 Key Clubbers from all across the United States, Canada, and the Caribbean!</p>
+        <p>International Convention is one of the biggest events of the Key Club year! This year is especially significant - because it is the 100th Anniversary of Kiwanis, members of Kiwanis, Circle K, and Key Club alike will be attending in Indianapolis, Indiana. By attending, you can meet more than 1,600 Key Clubbers from all across the United States, Canada, and the Caribbean!</p>
 
-        <p>Check out this video from International Convention 2013 to see how exciting the event is for yourself!</p>
+        <p>Check out this video from International Convention 2013:</p>
 
         <div class="embed-container">
             <iframe width="560" height="315" src="//www.youtube.com/embed/uEUlINPASRI" frameborder="0" allowfullscreen></iframe>
@@ -30,17 +30,21 @@ class: icon
     <article>
         <h1>Why should I go?</h1>
 
-        <p>As Key Club International said in <a href="http://www.keyclub.org/events/convention.aspx">this webpage</a> about International Convention, you should go because you will have the opportunity to:</p>
+        <p>Division 8 Lieutenant Governor Sarah Remig, the head of our International Convention subcommittee, has published an article detailing ICON <a href="/news/blog/announcements/international-convention-2015/"><b>here</b></a>.</p>
+
+        <p>As Key Club International said on <a href="http://www.keyclub.org/events/convention.aspx">this webpage,</a> International Convention will give you the opportunity to:</p>
 
         <ul>
             <li>Share innovative service project and fundraising ideas.</li>
-            <li>Listen to actor and activist Chris Bashinelli, host of PBS’ “Bridge the Gap.”</li>
+            <li>Listen to amazing speakers</li>
             <li>Learn about servant leadership.</li>
-            <li>Train for your 2014–15 leadership position.</li>
+            <li>Train for your 2015-16 leadership position.</li>
             <li>Elect next year’s Key Club International Board.</li>
+            <li>Celebrate 100 years of Kiwanis and its clubs (including Key Club!)</li>
             <li>Hear about our success so far with The Eliminate Project—and how you can help eliminate maternal and neonatal tetanus.</li>
             <li>Discover new charities and organizations you and your club can team up with.</li>
             <li>Have fun and make memories and friendships that last a lifetime.</li>
+            <li>See the sites in Indianapolis.</li>
         </ul>
     </article>
 </div>
@@ -49,14 +53,13 @@ class: icon
     <article>
         <h1>When and where is the event held?</h1>
 
-        <p>The 2014 Key Club International convention will take place July 2-6 in Anaheim, California, at the <a href="http://www.marriott.com/hotels/travel/laxah-anaheim-marriott/">Anaheim Marriott</a>.</p>
+        <p>The 2014 Key Club International convention will take place June 24-28, 2015 in downtown Indianapolis.</p>
     </article>
 </div>
 
 <div class="section" id="section5">
     <article>
-        <h1>Important Links</h1>
-
-        <p>Make sure you click <a href="http://www.keyclub.org/events/convention/registration.aspx">here</a> to register for the event and <a href="http://www.keyclub.org/events/convention/schedule.aspx">here</a> to find a schedule!</p>
+        <h1>Ready to register?</h1>
+        <button class="btn"><a href="/downloads/district-resources/for-everyone/ICON 2015 Packet.pdf"><i class="fa fa-download"></i>ICON Registration Packet 2015 (PDF)</a></button>
     </article>
 </div>
