--- a/website/about/advocacy/index.html
+++ b/website/about/advocacy/index.html
@@ -6,14 +6,13 @@ class: advocacy
 
 <h1 class="title">Advocacy</h1>
 
-<blockquote>Advocacy is speaking on behalf of those who cannot speak for themselves.</blockquote>
+<blockquote><b>Advocacy<b> <i>(advəkəsē),</i> n.- to speak on behalf of those who cannot speak for themselves. 
+</blockquote>
 
-<p>According to Key Club International, Advocacy is “speaking on behalf of those who cannot speak for themselves”. To advocate for a cause is different from fundraising for it. When you fundraise, you do it and you’re done. Yes people benefited from your services, but you never let those people know what you were volunteering for! For example, if you were to build a playground for an orphanage, or for your town, the people benefit, but no one outside of your club learns about the organization you’re helping. When you advocate, you raise awareness. You try to get as many people as you can aware of the organization or problem that you are fighting for!</p>
+<p>Every year, the New Jersey District selects an Advocacy Focus regarding an issue within our community.  This 2015-2016 Service Year, our district plans to do exactly that by advocating for those who suffer from autism.  Our state has the highest rate of autism in the Union, with 1 out of 45 children born in New Jersey being affected with the disorder.  Without support from organizations such as Key Club, many families are virtually helpless.  We can- and will- change that by providing a voice for those who must deal with this disorder every day of their lives.</p>
 
-<p>Every year, the New Jersey District Board picks a focus for the District to advocate for.</p>
+<p>In order to make a change in our community as a whole, we must work to raise awareness of how serious a problem autism is within New Jersey.  To do this successfully, we plan to partner with some of the organizations from within the state and across the country to create the greatest amount of change possible, and provide the most opportunities for the clubs of our district to support the cause.</p>
 
-<p>For the 2014-2015 service year, the New Jersey District Board has chosen hunger in the United States as its advocacy focus. This campaign aims to conduct service projects rather than fundraising. Through hands-on projects and advocacy, the campaign strives to make a difference in the district on the topic of hunger.</p>
+<p>The New Jersey District has already officially partnered with Ms. Beth Callahan, a public advocate for autism awareness.  She proposed that our District should participate in the upcoming Go the Distance for Autism Bike Ride on May 31st, a community fundraiser for four educational and treatment programs for kids and adults with autism across the state.  This will be just one of many district events that can make change for the sufferers of this disorder, and one that we need the help of every school in our district to attend.</p>
 
-<p>The District Board will be advocating for service organizations such as Students Change Hunger!</p>
-
-<img src="/img/about/advocacy/students-change-hunger-logo.png" alt="Students Change Hunger Logo">
+<img src="/downloads/upcoming-events/Go the Distance for Autism.jpg" alt="Go the Distance for Autism Flyer">
