--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -37,6 +37,10 @@ class: district-resources
                 <p>When is ICON 2015 and how do I register? This ICON 2015 Primer contains the details of attending as a member of the NJ District.</p>
             </li>
             <li>
+                <h3><a href="https://goo.gl/CxJkbl">DCON 2015 Workshop Presentations (Google Drive)</a></h3>
+                <p>Want the full presentations for the workshops you attended at DCON 2015? Here they are!</p>
+            </li>
+            <li>
                 <h3><a href="/downloads/district-resources/for-everyone/November 2014 Board Meeting Summary.pdf">November 2014 Board Meeting Summary (PDF)</a></h3>
                 <p>Read all about what the District Board has accomplished at the November 2014 Board Meeting thanks to this meeting summary created by Immediate PastDistrict Secretary Jacqueline Dragon!</p>
             </li>
