--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -32,8 +32,8 @@ class: district-resources
                 <p>Are you a graduating senior this year? If so, check out this scholarships packet compiled by our very own <a href="/board/farwa.html">Farwa Shakeel</a>!</p>
             </li>-->
             <li>
-                <h3><a href="https://goo.gl/T4bJ12"></a>District Feedback and Improvement Survey</h3>
-                <li>Do you want to provide feedback and help improve our district, but you don't know how? Fear no longer! Fill out this survey here to let us know how we're doing.</li>
+                <h3><a href="https://goo.gl/T4bJ12">District Feedback and Improvement Survey (Google Survey)</a></h3>
+                <p>Do you want to provide feedback and help improve our district, but you don't know how? Fear no longer! Fill out this survey here to let us know how we're doing.</p>
             </li>
 
             <li>
