Upload subcommittee articles and pages

--- a/website/about/district-project/index.html
+++ b/website/about/district-project/index.html
@@ -6,34 +6,34 @@ class: district-project
 
 <div class="section" id="section1">
     <article>
-        <h1 class="title">District Project: ELIMINATE</h1>
+        <h1 class="title">District Project: The New Jersey Federation of Food Banks</h1>
     </article>
 </div>
 
 <div class="section" id="section2">
     <article>
-        <img src="/img/about/district-project/eliminate-logo.png" alt="ELIMINATE Logo">
-        <p>The New Jersey District of Key Club International is proud to announce that we have chosen the Eliminate Project as our District Project for the 2014-2015 service year.</p>
+        <img src="/img/about/district-project/njfoodbanksmap.jpg" alt="NJ Food Banks Map">
+        <p>The New Jersey District of Key Club International is proud to announce that we have chosen the <b>New Jersey Federation of Food Banks</b> as our District Project for the 2015-2016 service year.</p>
     </article>
 </div>
 
 <div class="section" id="section3">
     <article>
-        <p>With The Eliminate Project, Kiwanis International and UNICEF have teamed up to rid the world of maternal and neonatal tetanus. Neonatal tetanus kills one baby every nine minutes, that's nearly <b>60,000 newborns a year</b>. MNT causes excruciating pain to newborns, while the mother can only stand nearby and watch their baby cry out in pain.</p>
+        <p>With this initiative, the New Jersey Federation of Food Banks and the New Jersey District of Key Club International have teamed up to galvanize awareness for hunger and poverty that are affecting our neighbors right here in New Jersey. You may not know it, but 1 in 8 people in New Jersey struggle with hunger - put that in the perspective of whichever school you attend, town in which you live, or activities in which you engage. Hunger is a very real problem, but often overlooked, so we are giving Key Clubbers opportunities to engage with their communities to make a difference.</p>
     </article>
 </div>
 
 <div class="section" id="section4">
     <article>
-        <p>To eliminate maternal and neonatal tetanus from the Earth, 129 million mothers and babies must be immunized. To cover the cost of vaccines, syringes, and other costs, the Kiwanis Family and UNICEF will need to raise by 2015:</p>
-        <h1>$110 Million</h1>
+        <p>In order to effectively devote our time to making the plight of the hungry known, we will be interacting with our community and civic organizations for many hours and many months. The District has recognized that our service hour goal toward the New Jersey Federation of Food Banks is:</p>
+        <h1>18,630 hours</h1>
     </article>
 </div>
 
 <div class="section" id="section5">
     <article>
         <h2>Our Fundraising Goal Is...</h2>
-        <h1>$109,325.15</h1>
+        <h1>$90,077.85</h1>
     </article>
 </div>
 
@@ -41,11 +41,10 @@ class: district-project
     <article>
         <h1>Break Down of the Numbers</h1>
         <ul>
-            <li><span class="number">10</span> - The year, 2010, that the ELIMINATE campaign began.</li>
-            <li><span class="number">9</span> - One baby dies every 9 minutes.</li>
-            <li><span class="number">3</span> - The 3 doses required to treat the disease.</li>
-            <li><span class="number">25</span> - The 25 countries that still have maternal and neonatal tetanus within their territory.</li>
-            <li><span class="number">15</span> - The year, 2015, that the ELIMINATE campaign will end.</li>
+            <li><span class="number">900</span> - The 900,000 New Jersey residents who rely on food banks.</li>
+            <li><span class="number">77</span> - 7.7 million times a year that someone is fed by a food bank.</li>
+            <li><span class="number">8</span> - 1 in 8 people in New Jersey struggle with hunger.</li>
+            <li><span class="number">5</span> - There are 5 food banks in the Federation working diligently and passionately to change the lives of the hungry.</li>
         </ul>
     </article>
 </div>
