--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -222,6 +222,10 @@ class: district-resources
                 <h3><a href="/downloads/district-resources/for-club-secretaries/Club Monthly Report Form.pdf">Club Monthly Report Form (PDF)</a></h3>
                 <p>Club secretaries are required to fill out this form by the 10th day of every month.</p>
             </li>
+            <li>
+                <h3><a href="/downloads/district-resources/for-club-secretaries/Club Monthly Report Form.rtf">Club Monthly Report Form (RTF)</a></h3>
+                <p>Club secretaries are required to fill out this form by the 10th day of every month. This is a RTF version and is to be used only as backup in case there are issues with the PDF.</p>
+            </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/Hours Record.xlsx">Hours Record Template (XLSX)</a></h3>
