--- a/website/events/upcoming/index.html
+++ b/website/events/upcoming/index.html
@@ -13,6 +13,11 @@ class: upcoming-events
 		<h3><a href="/downloads/upcoming-events/Go the Distance for Autism.jpg">Event Flyer (JPG)</a></h3>
         <p>Go the Distance for Autism is the largest charity cycling event in North Jersey. What exactly is it for? It is to change the future for those who struggle with autism, spread needed awareness, and impact the lives of children and their families living with autism every day. There are four programs involved in helping Go the Distance. They are: Alpine Learning Group, The EPIC School, Garden Academy, and REED Academy. These four programs are located in Northern New Jersey. All of the money that is raised from Go the Distance for Autism Ride is given to these four programs for educational and treatment programs for children and adults with autism. So, if you would like to help spread autism awareness, or help people with autism  get treatment, you should attend the Go the Distance for Autism Bike Ride this month! This year, the Go the Autism Bike Ride is being held on May 31st at Bergen Community College. For more information about this event go to www.gtd4autism.org under the “Event Details” tab.</p>
 	</dd>
+	<dt><h2>K-Family Picnic | 7.19.2015</h2></dt>
+	<dd>
+		<h3><a href="/events/kfamily-picnic/flyer.pdf">Event Flyer (PDF)</a> | <a href="/events/kfamily-picnic">Event Page</a></h3>
+        <p>On July 19, 2015, members from all branches of the K-Family alike are invited to come together in Toms River, NJ for a fun day at the beach filled with food and service projects! This is a great opportunity to connect with other members of the K-Family near you. Click the "event page" link above for more information.</p>
+	</dd>
 	<dt><h2>Teen Hunger Institute | 7.29.2015</h2></dt>
 	<dd>
 		<h3><a href="/downloads/upcoming-events/Teen Hunger Institute 2015.pdf">Event Flyer (PDF)</a></h3>
