--- a/website/quotes/index.html
+++ b/website/quotes/index.html
@@ -11,6 +11,12 @@ class: quotes
 <ul>
     <li>
         <blockquote>
+            <p>There go the people. I must follow them, for I am a leader.</p>
+            <span class="author"><a href="https://en.wikipedia.org/wiki/Alexandre_Auguste_Ledru-Rollin">Alexandre Ledru-Rollin</a></span>
+        </blockquote>
+    </li>
+    <li>
+        <blockquote>
             <p>Be kind, for whenever kindness becomes a part of something, it beautifies it.</p>
             <span class="author"><a href="https://en.wikipedia.org/wiki/Muhammad">Prophet Muhammad</a></span>
         </blockquote>
